bugfix: notion page width does not overflow the screen in moile

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -229,10 +229,26 @@
   }
 }
 
+@media only screen and (max-width: 1024px) {
+  /* Mobile/tablet breakpoint - apply 720px mechanism to all mobile sizes */
+  .notion-page {
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+  
+  .notion {
+    --notion-max-width: calc(100vw - 2rem);
+  }
+}
+
 @media only screen and (max-width: 720px) {
   .notion-page {
     padding-left: 2vw;
     padding-right: 2vw;
+  }
+  
+  .notion {
+    --notion-max-width: calc(100vw - 2rem);
   }
 }
 
